cmake_minimum_required(VERSION 3.4.1)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -ftemplate-depth=1024 -fvisibility=hidden -ffunction-sections -fdata-sections\
            -DGOOGLE_PROTOBUF_NO_RTTI -frtti -Wno-reserved-user-defined-literal\
            -fsigned-char -Wno-extern-c-compat -fexceptions")

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-exceptions -fno-rtti -DGOOGLE_PROTOBUF_NO_RTTI")

set(CMAKE_CXX_STANDARD 14)

ADD_DEFINITIONS (-DDARWIN_NO_CARBON)
ADD_DEFINITIONS (-DFT2_BUILD_LIBRARY)


add_library(skia STATIC
               "/mywork/github/skia/src/c/sk_paint.cpp"
               "/mywork/github/skia/src/c/sk_surface.cpp"
               "/mywork/github/skia/src/core/SkAAClip.cpp"
               "/mywork/github/skia/src/core/SkAnnotation.cpp"
               "/mywork/github/skia/src/core/SkAlphaRuns.cpp"
               "/mywork/github/skia/src/core/SkATrace.cpp"
               "/mywork/github/skia/src/core/SkAutoPixmapStorage.cpp"
               "/mywork/github/skia/src/core/SkBBHFactory.cpp"
               "/mywork/github/skia/src/core/SkBigPicture.cpp"
               "/mywork/github/skia/src/core/SkBitmap.cpp"
               "/mywork/github/skia/src/core/SkBitmapCache.cpp"
               "/mywork/github/skia/src/core/SkBitmapController.cpp"
               "/mywork/github/skia/src/core/SkBitmapDevice.cpp"
               "/mywork/github/skia/src/core/SkBitmapProcState.cpp"
               "/mywork/github/skia/src/core/SkBitmapProcState_matrixProcs.cpp"
               "/mywork/github/skia/src/core/SkBitmapProvider.cpp"
               "/mywork/github/skia/src/core/SkBlendMode.cpp"
               "/mywork/github/skia/src/core/SkBlitMask_D32.cpp"
               "/mywork/github/skia/src/core/SkBlitRow_D32.cpp"
               "/mywork/github/skia/src/core/SkBlitter.cpp"
               "/mywork/github/skia/src/core/SkBlitter_A8.cpp"
               "/mywork/github/skia/src/core/SkBlitter_ARGB32.cpp"
               "/mywork/github/skia/src/core/SkBlitter_RGB565.cpp"
               "/mywork/github/skia/src/core/SkBlitter_Sprite.cpp"
               "/mywork/github/skia/src/core/SkBlurImageFilter.cpp"
               "/mywork/github/skia/src/core/SkBuffer.cpp"
               "/mywork/github/skia/src/core/SkCachedData.cpp"
               "/mywork/github/skia/src/core/SkCanvas.cpp"
               "/mywork/github/skia/src/core/SkCanvasPriv.cpp"
               "/mywork/github/skia/src/core/SkCoverageDelta.cpp"
               "/mywork/github/skia/src/core/SkClipStack.cpp"
               "/mywork/github/skia/src/core/SkClipStackDevice.cpp"
               "/mywork/github/skia/src/core/SkColor.cpp"
               "/mywork/github/skia/src/core/SkColorFilter.cpp"
               "/mywork/github/skia/src/core/SkColorLookUpTable.cpp"
               "/mywork/github/skia/src/core/SkColorMatrixFilterRowMajor255.cpp"
               "/mywork/github/skia/src/core/SkColorSpace.cpp"
               "/mywork/github/skia/src/core/SkColorSpace_A2B.cpp"
               "/mywork/github/skia/src/core/SkColorSpace_New.cpp"
               "/mywork/github/skia/src/core/SkColorSpace_XYZ.cpp"
               "/mywork/github/skia/src/core/SkColorSpace_ICC.cpp"
               "/mywork/github/skia/src/core/SkColorSpaceXform.cpp"
               "/mywork/github/skia/src/core/SkColorSpaceXformCanvas.cpp"
               "/mywork/github/skia/src/core/SkColorSpaceXformer.cpp"
               "/mywork/github/skia/src/core/SkColorSpaceXform_A2B.cpp"
               "/mywork/github/skia/src/core/SkColorTable.cpp"
               "/mywork/github/skia/src/core/SkConvertPixels.cpp"
               "/mywork/github/skia/src/core/SkCpu.cpp"
               "/mywork/github/skia/src/core/SkCubicClipper.cpp"
               "/mywork/github/skia/src/core/SkCubicMap.cpp"
               "/mywork/github/skia/src/core/SkData.cpp"
               "/mywork/github/skia/src/core/SkDataTable.cpp"
               "/mywork/github/skia/src/core/SkDebug.cpp"
               "/mywork/github/skia/src/core/SkDeferredDisplayList.cpp"
               "/mywork/github/skia/src/core/SkDeferredDisplayListRecorder.cpp"
               "/mywork/github/skia/src/core/SkDeque.cpp"
               "/mywork/github/skia/src/core/SkDevice.cpp"
               "/mywork/github/skia/src/core/SkDeviceLooper.cpp"
               "/mywork/github/skia/src/core/SkDeviceProfile.cpp"
               "/mywork/github/skia/src/lazy/SkDiscardableMemoryPool.cpp"
               "/mywork/github/skia/src/core/SkDistanceFieldGen.cpp"
               "/mywork/github/skia/src/core/SkDither.cpp"
               "/mywork/github/skia/src/core/SkDocument.cpp"
               "/mywork/github/skia/src/core/SkDraw.cpp"
               "/mywork/github/skia/src/core/SkDraw_vertices.cpp"
               "/mywork/github/skia/src/core/SkDrawable.cpp"
               "/mywork/github/skia/src/core/SkDrawLooper.cpp"
               "/mywork/github/skia/src/core/SkDrawShadowInfo.cpp"
               "/mywork/github/skia/src/core/SkEdgeBuilder.cpp"
               "/mywork/github/skia/src/core/SkEdgeClipper.cpp"
               "/mywork/github/skia/src/core/SkExecutor.cpp"
               "/mywork/github/skia/src/core/SkAnalyticEdge.cpp"
               "/mywork/github/skia/src/core/SkFDot6Constants.cpp"
               "/mywork/github/skia/src/core/SkEdge.cpp"
               "/mywork/github/skia/src/core/SkArenaAlloc.cpp"
               "/mywork/github/skia/src/core/SkGaussFilter.cpp"
               "/mywork/github/skia/src/core/SkFlattenable.cpp"
               "/mywork/github/skia/src/core/SkFont.cpp"
               "/mywork/github/skia/src/core/SkFontLCDConfig.cpp"
               "/mywork/github/skia/src/core/SkFontMgr.cpp"
               "/mywork/github/skia/src/core/SkFontDescriptor.cpp"
               "/mywork/github/skia/src/core/SkFontStream.cpp"
               "/mywork/github/skia/src/core/SkGeometry.cpp"
               "/mywork/github/skia/src/core/SkGlobalInitialization_core.cpp"
               "/mywork/github/skia/src/core/SkGlyphCache.cpp"
               "/mywork/github/skia/src/core/SkGpuBlurUtils.cpp"
               "/mywork/github/skia/src/core/SkGraphics.cpp"
               "/mywork/github/skia/src/core/SkHalf.cpp"
               "/mywork/github/skia/src/core/SkICC.cpp"
               "/mywork/github/skia/src/core/SkImageFilter.cpp"
               "/mywork/github/skia/src/core/SkImageFilterCache.cpp"
               "/mywork/github/skia/src/core/SkImageInfo.cpp"
               "/mywork/github/skia/src/core/SkImageGenerator.cpp"
               "/mywork/github/skia/src/core/SkLineClipper.cpp"
               "/mywork/github/skia/src/core/SkLiteDL.cpp"
               "/mywork/github/skia/src/core/SkLiteRecorder.cpp"
               "/mywork/github/skia/src/core/SkLocalMatrixImageFilter.cpp"
               "/mywork/github/skia/src/core/SkMD5.cpp"
               "/mywork/github/skia/src/core/SkMallocPixelRef.cpp"
               "/mywork/github/skia/src/core/SkMask.cpp"
               "/mywork/github/skia/src/core/SkMaskBlurFilter.cpp"
               "/mywork/github/skia/src/core/SkMaskCache.cpp"
               "/mywork/github/skia/src/core/SkMaskFilter.cpp"
               "/mywork/github/skia/src/core/SkMaskGamma.cpp"
               "/mywork/github/skia/src/core/SkMath.cpp"
               "/mywork/github/skia/src/core/SkMatrix.cpp"
               "/mywork/github/skia/src/core/SkMatrix44.cpp"
               "/mywork/github/skia/src/core/SkMatrixImageFilter.cpp"
               "/mywork/github/skia/src/core/SkMetaData.cpp"
               "/mywork/github/skia/src/core/SkMipMap.cpp"
               "/mywork/github/skia/src/core/SkMiniRecorder.cpp"
               "/mywork/github/skia/src/core/SkModeColorFilter.cpp"
               "/mywork/github/skia/src/core/SkMultiPictureDraw.cpp"
               "/mywork/github/skia/src/core/SkLatticeIter.cpp"
               "/mywork/github/skia/src/core/SkOpts.cpp"
               "/mywork/github/skia/src/core/SkOverdrawCanvas.cpp"
               "/mywork/github/skia/src/core/SkPaint.cpp"
               "/mywork/github/skia/src/core/SkPaintPriv.cpp"
               "/mywork/github/skia/src/core/SkPath.cpp"
               "/mywork/github/skia/src/core/SkPath_serial.cpp"
               "/mywork/github/skia/src/core/SkPathEffect.cpp"
               "/mywork/github/skia/src/core/SkPathMeasure.cpp"
               "/mywork/github/skia/src/core/SkPathRef.cpp"
               "/mywork/github/skia/src/core/SkPicture.cpp"
               "/mywork/github/skia/src/core/SkPictureData.cpp"
               "/mywork/github/skia/src/core/SkPictureFlat.cpp"
               "/mywork/github/skia/src/core/SkPictureImageGenerator.cpp"
               "/mywork/github/skia/src/core/SkPicturePlayback.cpp"
               "/mywork/github/skia/src/core/SkPictureRecord.cpp"
               "/mywork/github/skia/src/core/SkPictureRecorder.cpp"
               "/mywork/github/skia/src/core/SkPixelRef.cpp"
               "/mywork/github/skia/src/core/SkPixmap.cpp"
               "/mywork/github/skia/src/core/SkPoint.cpp"
               "/mywork/github/skia/src/core/SkPoint3.cpp"
               "/mywork/github/skia/src/core/SkPtrRecorder.cpp"
               "/mywork/github/skia/src/core/SkQuadClipper.cpp"
               "/mywork/github/skia/src/core/SkRasterClip.cpp"
               "/mywork/github/skia/src/core/SkRasterPipeline.cpp"
               "/mywork/github/skia/src/core/SkRasterPipelineBlitter.cpp"
               "/mywork/github/skia/src/core/SkReadBuffer.cpp"
               "/mywork/github/skia/src/core/SkRecord.cpp"
               "/mywork/github/skia/src/core/SkRecords.cpp"
               "/mywork/github/skia/src/core/SkRecordDraw.cpp"
               "/mywork/github/skia/src/core/SkRecordOpts.cpp"
               "/mywork/github/skia/src/core/SkRecordedDrawable.cpp"
               "/mywork/github/skia/src/core/SkRecorder.cpp"
               "/mywork/github/skia/src/core/SkRect.cpp"
               "/mywork/github/skia/src/core/SkRefDict.cpp"
               "/mywork/github/skia/src/core/SkRegion.cpp"
               "/mywork/github/skia/src/core/SkRegion_path.cpp"
               "/mywork/github/skia/src/core/SkRemoteGlyphCache.cpp"
               "/mywork/github/skia/src/core/SkResourceCache.cpp"
               "/mywork/github/skia/src/core/SkRRect.cpp"
               "/mywork/github/skia/src/core/SkRTree.cpp"
               "/mywork/github/skia/src/core/SkRWBuffer.cpp"
               "/mywork/github/skia/src/core/SkScalar.cpp"
               "/mywork/github/skia/src/core/SkScalerContext.cpp"
               "/mywork/github/skia/src/core/SkScan.cpp"
               "/mywork/github/skia/src/core/SkScan_AAAPath.cpp"
               "/mywork/github/skia/src/core/SkScan_DAAPath.cpp"
               "/mywork/github/skia/src/core/SkScan_AntiPath.cpp"
               "/mywork/github/skia/src/core/SkScan_Antihair.cpp"
               "/mywork/github/skia/src/core/SkScan_Hairline.cpp"
               "/mywork/github/skia/src/core/SkScan_Path.cpp"
               "/mywork/github/skia/src/core/SkSemaphore.cpp"
               "/mywork/github/skia/src/core/SkSharedMutex.cpp"
               "/mywork/github/skia/src/core/SkSpecialImage.cpp"
               "/mywork/github/skia/src/core/SkSpecialSurface.cpp"
               "/mywork/github/skia/src/core/SkSpinlock.cpp"
               "/mywork/github/skia/src/core/SkSpriteBlitter_ARGB32.cpp"
               "/mywork/github/skia/src/core/SkSpriteBlitter_RGB565.cpp"
               "/mywork/github/skia/src/core/SkStream.cpp"
               "/mywork/github/skia/src/core/SkString.cpp"
               "/mywork/github/skia/src/core/SkStringUtils.cpp"
               "/mywork/github/skia/src/core/SkStroke.cpp"
               "/mywork/github/skia/src/core/SkStrokeRec.cpp"
               "/mywork/github/skia/src/core/SkStrokerPriv.cpp"
               "/mywork/github/skia/src/core/SkSwizzle.cpp"
               "/mywork/github/skia/src/core/SkSRGB.cpp"
               "/mywork/github/skia/src/core/SkTaskGroup.cpp"
               "/mywork/github/skia/src/core/SkTaskGroup2D.cpp"
               "/mywork/github/skia/src/core/SkTextBlob.cpp"
               "/mywork/github/skia/src/core/SkTime.cpp"
               "/mywork/github/skia/src/core/SkThreadedBMPDevice.cpp"
               "/mywork/github/skia/src/core/SkThreadID.cpp"
               "/mywork/github/skia/src/core/SkTLS.cpp"
               "/mywork/github/skia/src/core/SkTSearch.cpp"
               "/mywork/github/skia/src/core/SkTypeface.cpp"
               "/mywork/github/skia/src/core/SkTypeface_remote.cpp"
               "/mywork/github/skia/src/core/SkTypefaceCache.cpp"
               "/mywork/github/skia/src/core/SkUnPreMultiply.cpp"
               "/mywork/github/skia/src/core/SkUtils.cpp"
               "/mywork/github/skia/src/core/SkVertices.cpp"
               "/mywork/github/skia/src/core/SkVertState.cpp"
               "/mywork/github/skia/src/core/SkWriteBuffer.cpp"
               "/mywork/github/skia/src/core/SkWriter32.cpp"
               "/mywork/github/skia/src/core/SkXfermode.cpp"
               "/mywork/github/skia/src/core/SkXfermodeInterpretation.cpp"
               "/mywork/github/skia/src/core/SkYUVPlanesCache.cpp"
               "/mywork/github/skia/src/image/SkImage.cpp"
               "/mywork/github/skia/src/image/SkImage_Lazy.cpp"
               "/mywork/github/skia/src/image/SkImage_Raster.cpp"
               "/mywork/github/skia/src/image/SkSurface.cpp"
               "/mywork/github/skia/src/image/SkSurface_Raster.cpp"
               "/mywork/github/skia/src/pipe/SkPipeCanvas.cpp"
               "/mywork/github/skia/src/pipe/SkPipeReader.cpp"
               "/mywork/github/skia/src/shaders/SkBitmapProcShader.cpp"
               "/mywork/github/skia/src/shaders/SkColorFilterShader.cpp"
               "/mywork/github/skia/src/shaders/SkColorShader.cpp"
               "/mywork/github/skia/src/shaders/SkComposeShader.cpp"
               "/mywork/github/skia/src/shaders/SkImageShader.cpp"
               "/mywork/github/skia/src/shaders/SkLocalMatrixShader.cpp"
               "/mywork/github/skia/src/shaders/SkPictureShader.cpp"
               "/mywork/github/skia/src/shaders/SkShader.cpp"
               "/mywork/github/skia/src/pathops/SkAddIntersections.cpp"
               "/mywork/github/skia/src/pathops/SkDConicLineIntersection.cpp"
               "/mywork/github/skia/src/pathops/SkDCubicLineIntersection.cpp"
               "/mywork/github/skia/src/pathops/SkDCubicToQuads.cpp"
               "/mywork/github/skia/src/pathops/SkDLineIntersection.cpp"
               "/mywork/github/skia/src/pathops/SkDQuadLineIntersection.cpp"
               "/mywork/github/skia/src/pathops/SkIntersections.cpp"
               "/mywork/github/skia/src/pathops/SkOpAngle.cpp"
               "/mywork/github/skia/src/pathops/SkOpBuilder.cpp"
               "/mywork/github/skia/src/pathops/SkOpCoincidence.cpp"
               "/mywork/github/skia/src/pathops/SkOpContour.cpp"
               "/mywork/github/skia/src/pathops/SkOpCubicHull.cpp"
               "/mywork/github/skia/src/pathops/SkOpEdgeBuilder.cpp"
               "/mywork/github/skia/src/pathops/SkOpSegment.cpp"
               "/mywork/github/skia/src/pathops/SkOpSpan.cpp"
               "/mywork/github/skia/src/pathops/SkPathOpsCommon.cpp"
               "/mywork/github/skia/src/pathops/SkPathOpsConic.cpp"
               "/mywork/github/skia/src/pathops/SkPathOpsCubic.cpp"
               "/mywork/github/skia/src/pathops/SkPathOpsCurve.cpp"
               "/mywork/github/skia/src/pathops/SkPathOpsDebug.cpp"
               "/mywork/github/skia/src/pathops/SkPathOpsLine.cpp"
               "/mywork/github/skia/src/pathops/SkPathOpsOp.cpp"
               "/mywork/github/skia/src/pathops/SkPathOpsPoint.cpp"
               "/mywork/github/skia/src/pathops/SkPathOpsQuad.cpp"
               "/mywork/github/skia/src/pathops/SkPathOpsRect.cpp"
               "/mywork/github/skia/src/pathops/SkPathOpsSimplify.cpp"
               "/mywork/github/skia/src/pathops/SkPathOpsTSect.cpp"
               "/mywork/github/skia/src/pathops/SkPathOpsTightBounds.cpp"
               "/mywork/github/skia/src/pathops/SkPathOpsTypes.cpp"
               "/mywork/github/skia/src/pathops/SkPathOpsWinding.cpp"
               "/mywork/github/skia/src/pathops/SkPathWriter.cpp"
               "/mywork/github/skia/src/pathops/SkReduceOrder.cpp"
               "/mywork/github/skia/src/jumper/SkJumper.cpp"
               "/mywork/github/skia/src/jumper/SkJumper_stages.cpp"
               "/mywork/github/skia/src/jumper/SkJumper_stages_lowp.cpp"
               "/mywork/github/skia/src/utils/SkBase64.cpp"
               "/mywork/github/skia/src/utils/SkFrontBufferedStream.cpp"
               "/mywork/github/skia/src/utils/SkCamera.cpp"
               "/mywork/github/skia/src/utils/SkCanvasStack.cpp"
               "/mywork/github/skia/src/utils/SkCanvasStateUtils.cpp"
               "/mywork/github/skia/src/utils/SkDashPath.cpp"
               "/mywork/github/skia/src/utils/SkDumpCanvas.cpp"
               "/mywork/github/skia/src/utils/SkEventTracer.cpp"
               "/mywork/github/skia/src/utils/SkFloatToDecimal.cpp"
               "/mywork/github/skia/src/utils/SkInsetConvexPolygon.cpp"
               "/mywork/github/skia/src/utils/SkInterpolator.cpp"
               "/mywork/github/skia/src/utils/SkJSONWriter.cpp"
               "/mywork/github/skia/src/utils/SkMatrix22.cpp"
               "/mywork/github/skia/src/utils/SkMultiPictureDocument.cpp"
               "/mywork/github/skia/src/utils/SkNWayCanvas.cpp"
               "/mywork/github/skia/src/utils/SkNullCanvas.cpp"
               "/mywork/github/skia/src/utils/SkOSPath.cpp"
               "/mywork/github/skia/src/utils/SkPaintFilterCanvas.cpp"
               "/mywork/github/skia/src/utils/SkParse.cpp"
               "/mywork/github/skia/src/utils/SkParseColor.cpp"
               "/mywork/github/skia/src/utils/SkParsePath.cpp"
               "/mywork/github/skia/src/utils/SkPatchUtils.cpp"
               "/mywork/github/skia/src/utils/SkShadowTessellator.cpp"
               "/mywork/github/skia/src/utils/SkShadowUtils.cpp"
               "/mywork/github/skia/src/utils/SkTextBox.cpp"
               "/mywork/github/skia/src/utils/SkThreadUtils_pthread.cpp"
               "/mywork/github/skia/src/utils/SkThreadUtils_win.cpp"
               "/mywork/github/skia/src/utils/SkWhitelistTypefaces.cpp"
               "/mywork/github/skia/src/utils/mac/SkCreateCGImageRef.cpp"
               "/mywork/github/skia/src/utils/win/SkAutoCoInitialize.cpp"
               "/mywork/github/skia/src/utils/win/SkDWrite.cpp"
               "/mywork/github/skia/src/utils/win/SkDWriteFontFileStream.cpp"
               "/mywork/github/skia/src/utils/win/SkDWriteGeometrySink.cpp"
               "/mywork/github/skia/src/utils/win/SkHRESULT.cpp"
               "/mywork/github/skia/src/utils/win/SkIStream.cpp"
               "/mywork/github/skia/src/utils/win/SkWGL_win.cpp"
               "/mywork/github/skia/src/xps/SkXPSDocument.cpp"
               "/mywork/github/skia/src/xps/SkXPSDevice.cpp"
               "/mywork/github/skia/src/android/SkAndroidFrameworkUtils.cpp"
               "/mywork/github/skia/src/android/SkAnimatedImage.cpp"
               "/mywork/github/skia/src/android/SkBitmapRegionCodec.cpp"
               "/mywork/github/skia/src/android/SkBitmapRegionDecoder.cpp"
               "/mywork/github/skia/src/codec/SkAndroidCodec.cpp"
               "/mywork/github/skia/src/codec/SkBmpBaseCodec.cpp"
               "/mywork/github/skia/src/codec/SkBmpCodec.cpp"
               "/mywork/github/skia/src/codec/SkBmpMaskCodec.cpp"
               "/mywork/github/skia/src/codec/SkBmpRLECodec.cpp"
               "/mywork/github/skia/src/codec/SkBmpStandardCodec.cpp"
               "/mywork/github/skia/src/codec/SkCodec.cpp"
               "/mywork/github/skia/src/codec/SkCodecImageGenerator.cpp"
               "/mywork/github/skia/src/codec/SkGifCodec.cpp"
               "/mywork/github/skia/src/codec/SkMaskSwizzler.cpp"
               "/mywork/github/skia/src/codec/SkMasks.cpp"
               "/mywork/github/skia/src/codec/SkSampledCodec.cpp"
               "/mywork/github/skia/src/codec/SkSampler.cpp"
               "/mywork/github/skia/src/codec/SkStreamBuffer.cpp"
               "/mywork/github/skia/src/codec/SkSwizzler.cpp"
               "/mywork/github/skia/src/codec/SkWbmpCodec.cpp"
               "/mywork/github/skia/src/images/SkImageEncoder.cpp"
               "/mywork/github/skia/src/ports/SkDiscardableMemory_none.cpp"
               "/mywork/github/skia/src/ports/SkImageGenerator_skia.cpp"
               "/mywork/github/skia/src/ports/SkMemory_malloc.cpp"
               "/mywork/github/skia/src/ports/SkOSFile_stdio.cpp"
               "/mywork/github/skia/src/sfnt/SkOTTable_name.cpp"
               "/mywork/github/skia/src/sfnt/SkOTUtils.cpp"
               "/mywork/github/skia/src/utils/mac/SkStream_mac.cpp"
               "/mywork/github/skia/third_party/gif/SkGifImageReader.cpp"
               "/mywork/github/skia/src/ports/SkOSFile_posix.cpp"
               "/mywork/github/skia/src/ports/SkOSLibrary_posix.cpp"
               "/mywork/github/skia/src/ports/SkTLS_pthread.cpp"
               "/mywork/github/skia/src/ports/SkDebug_stdio.cpp"
               "/mywork/github/skia/src/ports/SkFontHost_mac.cpp"
               "/mywork/github/skia/src/ports/SkImageEncoder_CG.cpp"
               "/mywork/github/skia/src/ports/SkImageGeneratorCG.cpp"
            )

target_include_directories(skia PRIVATE
	            ${CMAKE_CURRENT_SOURCE_DIR}/
	            ${CMAKE_CURRENT_SOURCE_DIR}/skia/include/core
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/include/utils
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/include/gpu
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/include/pathops
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/include/ports
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/include/effects
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/include/config
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/include/gpu/gl
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/include/pipe
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/include/images
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/include/xml
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/src/core
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/src/image
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/include
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/src/gpu
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/src/opts
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/src/sfnt
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/src/utils
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/src/effects
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/src/lazy
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/third_party/expat
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/third_party/etc1
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/third_party/ktx
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/third_party/externals/libpng
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/third_party/externals/libjpeg
                ${CMAKE_CURRENT_SOURCE_DIR}/skia/third_party/freetype/include
            )

#//////////////


#////////////////////
add_library(freetype STATIC
        skia/third_party/freetype/src/base/ftbbox.c    
	    skia/third_party/freetype/src/base/ftbitmap.c    
	    skia/third_party/freetype/src/base/ftfstype.c    
	    skia/third_party/freetype/src/base/ftglyph.c    
	    skia/third_party/freetype/src/base/ftlcdfil.c    
	    skia/third_party/freetype/src/base/ftstroke.c    
	    skia/third_party/freetype/src/base/fttype1.c    
	    skia/third_party/freetype/src/base/ftxf86.c    
	    skia/third_party/freetype/src/base/ftbase.c    
	    skia/third_party/freetype/src/base/ftsystem.c    
	    skia/third_party/freetype/src/base/ftinit.c    
	    skia/third_party/freetype/src/base/ftgasp.c    
	    skia/third_party/freetype/src/gzip/ftgzip.c    
	    skia/third_party/freetype/src/raster/raster.c    
	    skia/third_party/freetype/src/sfnt/sfnt.c    
	    skia/third_party/freetype/src/smooth/smooth.c    
	    skia/third_party/freetype/src/autofit/autofit.c    
	    skia/third_party/freetype/src/truetype/truetype.c    
	    skia/third_party/freetype/src/cff/cff.c    
	    skia/third_party/freetype/src/psnames/psnames.c    
	    skia/third_party/freetype/src/pshinter/pshinter.c
    )

target_include_directories(freetype PRIVATE
    skia/third_party/freetype/include
    skia/third_party/externals/libpng
)

#//////////////

add_library(png STATIC
            skia/third_party/externals/libpng/png.c    
            skia/third_party/externals/libpng/pngerror.c    
            skia/third_party/externals/libpng/pngget.c    
            skia/third_party/externals/libpng/pngmem.c    
            skia/third_party/externals/libpng/pngpread.c    
            skia/third_party/externals/libpng/pngread.c    
            skia/third_party/externals/libpng/pngrio.c    
            skia/third_party/externals/libpng/pngrtran.c    
            skia/third_party/externals/libpng/pngrutil.c    
            skia/third_party/externals/libpng/pngset.c    
            skia/third_party/externals/libpng/pngtrans.c    
            skia/third_party/externals/libpng/pngwio.c    
            skia/third_party/externals/libpng/pngwrite.c    
            skia/third_party/externals/libpng/pngwtran.c    
            skia/third_party/externals/libpng/pngwutil.c    
        )

target_include_directories(png PRIVATE
    skia/third_party/externals/libpng
    skia/third_party/externals/zlib
)

#  jpeg
add_library(jpeg STATIC
          "/mywork/github/skia/third_party/externals/libjpeg-turbo/jaricom.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jcapimin.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jcapistd.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jcarith.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jccoefct.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jccolor.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jcdctmgr.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jchuff.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jcinit.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jcmainct.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jcmarker.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jcmaster.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jcomapi.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jcparam.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jcphuff.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jcprepct.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jcsample.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jdapimin.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jdapistd.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jdarith.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jdcoefct.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jdcolor.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jddctmgr.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jdhuff.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jdinput.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jdmainct.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jdmarker.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jdmaster.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jdmerge.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jdphuff.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jdpostct.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jdsample.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jerror.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jfdctflt.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jfdctfst.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jfdctint.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jidctflt.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jidctfst.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jidctint.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jidctred.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jmemmgr.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jmemnobs.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jquant1.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jquant2.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jutils.c"
           "/mywork/github/skia/third_party/externals/libjpeg-turbo/jsimd_none.c"
    )

target_include_directories(jpeg PRIVATE
     "/mywork/github/skia/third_party/libjpeg-turbo/"
     "/mywork/github/skia/third_party/externals/libjpeg-turbo/"
     skia/third_party/externals/zlib
)

#zlib
add_library(zlib STATIC
                skia/third_party/externals/zlib/adler32.c    
                skia/third_party/externals/zlib/compress.c    
                skia/third_party/externals/zlib/crc32.c    
                skia/third_party/externals/zlib/deflate.c    
                skia/third_party/externals/zlib/gzclose.c    
                skia/third_party/externals/zlib/gzlib.c    
                skia/third_party/externals/zlib/gzread.c    
                skia/third_party/externals/zlib/gzwrite.c    
                skia/third_party/externals/zlib/infback.c    
                skia/third_party/externals/zlib/inflate.c    
                skia/third_party/externals/zlib/inftrees.c    
                skia/third_party/externals/zlib/inffast.c    
                skia/third_party/externals/zlib/trees.c    
                skia/third_party/externals/zlib/uncompr.c    
                skia/third_party/externals/zlib/zutil.c    
    )
    
target_include_directories(zlib PRIVATE
    skia/third_party/externals/zlib
)

#runtimecanvas


 add_library(runtimecanvas SHARED
                android/src/main/cpp/gl_code.cpp
                android/src/main/cpp/GlesUtil.cpp
                android/src/main/cpp/SkiaApp.cpp
                android/src/main/cpp/JniShell.cpp
                android/src/main/cpp/StdC.cpp
                skia/third_party/externals/zlib/adler32.c
                skia/third_party/externals/zlib/compress.c
                skia/third_party/externals/zlib/crc32.c
                skia/third_party/externals/zlib/deflate.c
                skia/third_party/externals/zlib/gzclose.c
                skia/third_party/externals/zlib/gzlib.c
                skia/third_party/externals/zlib/gzread.c
                skia/third_party/externals/zlib/gzwrite.c
                skia/third_party/externals/zlib/infback.c
                skia/third_party/externals/zlib/inflate.c
                skia/third_party/externals/zlib/inftrees.c
                skia/third_party/externals/zlib/inffast.c
                skia/third_party/externals/zlib/trees.c
                skia/third_party/externals/zlib/uncompr.c
                skia/third_party/externals/zlib/zutil.c
            )

 target_include_directories(runtimecanvas PRIVATE
                        CanvasContext/Canvas2D
                        CanvasContext/geometry
                        CanvasContext/utils
                        skia/include/core
                        skia/include/utils
                        skia/include/gpu
                        skia/include/pathops
                        skia/include/ports
                        skia/include/effects
                        skia/include/config
                        skia/include/gpu/gl
                        skia/include/pipe
                        skia/include/images
                        skia/include/xml
                        skia/src/core
                        skia/src/image
                        skia/include
                        skia/src/gpu
                        skia/src/opts
                        skia/src/sfnt
                        skia/src/utils
                        skia/src/effects
                        skia/src/lazy
                        skia/third_party/expat
                        skia/third_party/etc1
                        skia/third_party/ktx
                        skia/third_party/externals/libpng
                        skia/third_party/externals/libjpeg
                        skia/third_party/freetype/include
                      )


target_link_libraries(runtimecanvas
                    log
                    EGL
                    GLESv2
                    android
                    zlib
                    skia
                    freetype
                    png
                    jpeg
                    )
